--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+     "deploy": "vercel --prod",
+     "predeploy": "npm run build"
   },
   "dependencies": {
     "@radix-ui/react-icons": "^1.3.2",
